# ADPipeline

./: .gitignore  README.md  requirements.txt  test.py
data/: data_prep.py
deployment/: CMakeLists.txt  Dockerfile  inferenceServer.cpp  pytorchmodel_v2.onnx  testscript.py
models/: model.py  model_testing.py  pytorch_model.py  pytorchmodel_v2.onnx  pytorchmodel_v2_1_1.onnx  pytorchmodel_v2_1_2.onnx
